--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Reset css */
 *{
     margin:0;
     padding: 0;
@@ -10,4 +11,9 @@
     max-width: 1170px;
     margin: 0 auto;
     padding: 0 15px;
+}
+.carte-back{
+    background: grey;
+    width: calc(95% / 4);
+    margin : 1%;
 }
